Display words from API on RecyclerView

--- a/Scrabble-Computer-vision/app/src/main/res/layout/activity_picture.xml
+++ b/Scrabble-Computer-vision/app/src/main/res/layout/activity_picture.xml
@@ -16,5 +16,19 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textInputEditText"
         tools:text="@string/picture_confirm" />
+
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/textInputEditText"
+        android:layout_width="168dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="265dp"
+        android:layout_marginBottom="70dp"
+        android:hint="Type letters..."
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
