--- a/Character detection and recognition/DetectionModule/app/src/main/res/layout/activity_main.xml
+++ b/Character detection and recognition/DetectionModule/app/src/main/res/layout/activity_main.xml
@@ -17,17 +17,18 @@
         android:id="@+id/CameraView"
 
         />
-<!--    <ImageView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="0dp"-->
-<!--        android:layout_weight="1"-->
-<!--        android:id="@+id/image_view"/>-->
 
-<!--    <Button-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:id="@+id/bt_open"-->
-<!--        android:text="Open camera"-->
-<!--        android:layout_marginTop="10dp"/>-->
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:id="@+id/image_view"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/bt_open"
+        android:text="Capture image"
+        android:layout_marginBottom="50dp"/>
 
 </LinearLayout>
